trunk/Archive2/76/e91d9aaf8f4760/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:10:5: error: no matching function for call to 'f'
    f({});
    ^
main.cpp:6:6: note: candidate function not viable: cannot convert initializer list argument to 'A'
void f(A){}
     ^
1 error generated.
